<resources>
    <string name="app_name">WeatherMate</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Weather Mate</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="ScrollViewContent" translatable="false">main_scroll_view</string>
    <string name="today">Today</string>
    <string name="current_day" translatable="false">Sat, 5 Aug</string>
    <string name="current_degree" translatable="false">30</string>
    <string name="current_degree2" translatable="false">10</string>
    <string name="degree_type" translatable="false">\u2103</string>
    <string name="degree_symbol" translatable="false">\u00B0</string>
    <string name="max_deg" translatable="false">25</string>
    <string name="min_deg" translatable="false">10</string>
    <string name="weather_desc" translatable="false">Some Clouds</string>
    <string name="current_location" translatable="false">Gamal Abd Elnasser, Alex</string>
    <string name="current_time" translatable="false">05:23</string>
    <string name="feels_like">Feels like</string>
    <string name="hourly_forecast">Hourly forecast</string>
    <string name="next_days">Next 7 Days</string>
    <string name="humidity">Humidity</string>
    <string name="hum_val" translatable="false">20%</string>
    <string name="wind_speed">Wind</string>
    <string name="wind_val" translatable="false">2.1 km/h</string>
    <string name="pressure">Pressure</string>
    <string name="pres_val" translatable="false">1051</string>
    <string name="clouds">Cloud Cover</string>
    <string name="clouds_val" translatable="false">50%</string>
    <string name="sunrise_val" translatable="false">12:32</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="sunset_val" translatable="false">06:11</string>
    <string name="current_hour" translatable="false">10 AM</string>
    <string name="day_date" translatable="false">3/23</string>
    <string name="day_name" translatable="false">Today</string>
    <string name="daystatus" translatable="false">daystatus</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="percent_symbol" translatable="false">%</string>
    <string name="wind_unit"> m/s</string>
    <string name="wind_unit_2"> mph</string>
    <string name="dialog_msg">We need your location to provide our services. Allow us to access your location?</string>
    <string name="yes">OK</string>
    <string name="no">CANCEL</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="thinking_face" translatable="false">thinking face</string>
    <string name="use_location_service" translatable="false">Use location service?</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_alerts">Alerts</string>
    <string name="fragment_favorites">Favorites</string>
    <string name="location">Current Location By</string>
    <string name="map">MAP</string>
    <string name="gps">GPS</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius\n℃, m/s</string>
    <string name="fahrenheit">Fahrenheit\n℉, mph</string>
    <string name="kelvin">Kelvin\nK, m/s</string>
    <string name="meter_sec">meter/sec\nm/s</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="mph">miles/hour\nmph</string>
    <string name="version" translatable="false">Version 1.0</string>
    <string name="pressure_unit">mb</string>
    <string name="map_fragment">Choosing location</string>
    <string name="fab" translatable="false">Add new Favorite</string>
    <string name="no_results" translatable="false">no_results_photo</string>
    <string name="alexandria" translatable="false">Alexandria</string>
    <string name="to_add_a_location" translatable="false">to add a location</string>
    <string name="from">From:</string>
    <string name="current_date">05-May-2023</string>
    <string name="to">To:</string>
    <string name="current_limit_date">25-April-2023</string>
    <string name="type">Type:</string>
    <string name="alerts_dropdown_menu" translatable="false">Alerts DropDown menu</string>
    <string name="radio_button_alarm">Alarm</string>
    <string name="radio_button_notification">Notification</string>
    <string name="confirm">Confirm</string>
    <string name="at">At:</string>
    <string name="from_date">from_date</string>
    <string name="to_date">to_date</string>
    <string name="dash">dash</string>
    <string name="from_time">from_time</string>
    <string name="to_time">to_time</string>
    <string name="no_alert_weather_is_fine">no_alert_weather_is_fine</string>
    <string name="features">features</string>
    <string name="weather_alarm">weather_alarm</string>
    <string name="alert_added_successfully">alert_added_successfully</string>
    <string name="info">info</string>
    <string name="enter_date_time">enter_date_time</string>
    <string name="notifications">notifications</string>
    <string name="alarm">alarm</string>
    <string name="setup_alert">setup_alert</string>
    <string name="alerts">alerts</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="save_alert">save_alert</string>
    <string name="alarm_description">alarm_description</string>
    <string name="country">country</string>
    <string name="add_time">add_time</string>
    <string name="time">time</string>
    <string-array name="alert_types">
        <item>Thunderstorm</item>
        <item>Tornado</item>
        <item>Hurricane Watch</item>
        <item>Flash Flood</item>
        <item>Winter Storm</item>
        <item>Heat Advisory</item>
        <item>Tropical Storm</item>
        <item>High Wind</item>
        <item>Blizzard</item>
    </string-array>
</resources>