<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--
        <variable
            name="myFragment"
            type="com.example.weathermate.alerts.AlertsDialogFragment"/>
            -->
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="529dp">


            <TextView
                android:id="@+id/txt_alarm_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:minHeight="48dp"
                android:padding="5dp"
                android:text="@string/country"
                android:textColor="#676666"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_alarm_desc"
                android:layout_width="173dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="60dp"
                android:clickable="true"
                android:fontFamily="sans-serif"
                android:minHeight="48dp"
                android:padding="5dp"
                android:text="@string/alarm_description"
                android:textColor="#676666"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/txt_alarm_country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/radio_group" />

            <TextView
                android:id="@+id/tv_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/rubik"
                android:text="@string/from"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_current_date"
                app:layout_constraintEnd_toStartOf="@+id/tv_current_date"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="11dp"
                android:fontFamily="@font/rubik"
                android:text="@string/current_date"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_from"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/rubik"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_limit_date"
                app:layout_constraintEnd_toEndOf="@+id/tv_from"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_limit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="31dp"
                android:fontFamily="@font/rubik"
                android:text="@string/current_limit_date"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_current_date" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/rubik"
                android:text="@string/type"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/radio_button_alarm"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/rubik"
                android:text="@string/at"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_to" />

            <TextView
                android:id="@+id/tv_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="21dp"
                android:fontFamily="@font/rubik"
                android:text="@string/current_time"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/drop_menu"
                app:layout_constraintEnd_toEndOf="@+id/drop_menu" />

            <Spinner
                android:id="@+id/drop_menu"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="77dp"
                android:layout_marginBottom="75dp"
                android:contentDescription="@string/alerts_dropdown_menu"
                android:fontFamily="@font/rubik"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/radio_button_notification"
                app:layout_constraintEnd_toEndOf="@+id/txt_alarm_desc"
                app:layout_constraintStart_toStartOf="@+id/btn_confrim"
                app:layout_constraintTop_toBottomOf="@+id/tv_limit_date" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="53dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/btn_confrim"
                app:layout_constraintStart_toEndOf="@+id/btn_save_alert"
                app:layout_constraintTop_toTopOf="@+id/btn_save_alert">


            </RadioGroup>


            <Button
                android:id="@+id/btn_confrim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="141dp"
                android:fontFamily="@font/rubik"

                android:text="@string/confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radio_group" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_alert"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:backgroundTint="@color/black"
                android:gravity="center"

                android:text="@string/save_alert"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_confrim"
                app:layout_constraintEnd_toStartOf="@+id/radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_confrim"
                tools:ignore="MissingConstraints" />

            <RadioButton
                android:id="@+id/radio_button_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="34dp"
                android:fontFamily="@font/rubik"

                android:text="@string/radio_button_alarm"
                app:layout_constraintBottom_toTopOf="@+id/btn_save_alert"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/radio_button_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="28dp"
                android:fontFamily="@font/rubik"

                android:text="@string/radio_button_notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/radio_button_alarm" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
