<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/rubik"
                android:text="@string/use_location_service"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/dialog_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/thinking_face"
                android:src="@mipmap/thinking_face"
                app:layout_constraintBottom_toTopOf="@id/dialog_msg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_title" />

            <TextView
                android:id="@+id/dialog_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:textSize="20sp"
                android:fontFamily="@font/rubik"
                android:text="@string/dialog_msg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_img" />

            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/rubik"
                android:gravity="center"
                android:onClick="cancel"
                android:text="@string/no"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ok_button"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@+id/dialog_msg" />

            <TextView
                android:id="@+id/ok_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/rubik"
                android:gravity="center"
                android:onClick="navToSettings"
                android:text="@string/yes"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/dialog_msg"
                app:layout_constraintTop_toBottomOf="@+id/dialog_msg" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>