<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_hourly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_card"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/v_main_s_gl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.08" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/v_main_e_gl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.92" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/h_main_card_s_gl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/h_main_card_e_gl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="10dp" />

            <ImageView
                android:id="@+id/current_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                app:layout_constraintStart_toStartOf="@+id/v_main_s_gl"
                app:layout_constraintTop_toBottomOf="@id/h_main_card_s_gl"
                app:layout_constraintEnd_toStartOf="@id/v_main_e_gl"
                app:srcCompat="@mipmap/sun" />

            <TextView
                android:id="@+id/current_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="6dp"
                android:text="@string/current_hour"
                android:fontFamily="@font/rubik"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/v_main_s_gl"
                app:layout_constraintTop_toBottomOf="@id/current_img" />

            <TextView
                android:id="@+id/current_day_deg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_degree"
                android:textColor="@color/white"
                android:fontFamily="@font/rubik"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/v_main_s_gl"
                app:layout_constraintTop_toBottomOf="@id/current_hour"
                app:layout_constraintBottom_toTopOf="@id/h_main_card_e_gl" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_little"
                android:text="@string/degree_type"
                android:fontFamily="@font/rubik"
                android:textColor="@color/degree_type"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/h_main_card_e_gl"
                app:layout_constraintStart_toEndOf="@id/current_day_deg"
                app:layout_constraintTop_toBottomOf="@id/current_hour" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>